# NasaRmc2018

./: '  .gitignore  .travis.yml  2018-2019-Outline.MD  LICENSE  NasaRmc2018_dependencies.sh  README.md  Trello.txt  build_all  fast_build_all  kj.MD  notes_on_actuators_and_encoders.md  run_tests  setup_arduino.sh  setup_permissions.sh  start_mission_control.sh  start_robot.sh
src/jetson_tx2/: CMakeLists.txt  package.xml
src/jetson_tx2/src/: gpio.c
src/tfr_aruco/: CMakeLists.txt  board.data  package.xml  regenerate_markers.py
src/tfr_aruco/launch/: aruco.launch  test_aruco.launch
src/tfr_aruco/src/: .tfr_aruco_example_client.cpp.swp  aruco_action_client.cpp  aruco_action_server.cpp  generatedMarker.h  tfr_aruco_example_client.cpp  tfr_aruco_server.cpp
src/tfr_control/: CMakeLists.txt  package.xml
src/tfr_control/arduino/: README.md  quadrature.h
src/tfr_control/config/: controllers.yaml  proto_control_params.yaml  test_client_positions.yaml
src/tfr_control/data/: test_client_positions.yaml
src/tfr_control/launch/: control.launch  drivebase.launch  pwm_bridge.launch  pwm_demo.launch  test_armclient.launch  test_armserver.launch  test_control.launch  test_controller.launch  test_controller_launcher.launch  test_moveit.launch
src/tfr_control/src/: ProtoDriverStation.cpp  adc_service.cpp  ads1115_tx2_i2c_interface.cpp  ads1x1x.c  arm_action_server.cpp  bin_control_server.cpp  bin_controller.cpp  control.cpp  control_echo.cpp  control_helper.cpp  controller.cpp  controller_launcher.cpp  drivebase.cpp  drivebase_publisher.cpp  motor_toggle_test.cpp  proto_driver_station.cpp  pwm_blink.cpp  pwm_bridge.cpp  pwm_interface.cpp  robot_interface.cpp  test_client.cpp  test_cmd.cpp  test_e_stop.cpp
src/tfr_control/test/: test_tfr_control.cpp
src/tfr_description/: CMakeLists.txt  package.xml
src/tfr_description/xacro/: model.xacro  model_arm.xacro  model_base.xacro  model_constants.xacro  proto.xacro  proto_constants.xacro  proto_drivebase_controller.xacro  proto_model.xacro  proto_sensors.xacro
src/tfr_dumping/: CMakeLists.txt  package.xml
src/tfr_dumping/launch/: dumping.launch  dumping_action_client.launch  dumping_action_server.launch
src/tfr_dumping/src/: dumping_action_client.cpp  dumping_action_server.cpp  dumping_echo.cpp  dumping_helper.cpp
src/tfr_dumping/test/: test_tfr_dumping.cpp
src/tfr_executive/: CMakeLists.txt  package.xml
src/tfr_executive/launch/: executive.launch
src/tfr_executive/src/: autonomous_action_client.cpp  autonomous_action_server.cpp  clock_service.cpp  executive_echo.cpp  executive_helper.cpp  teleop_action_client.cpp  teleop_action_server.cpp  teleop_action_server.cpp~
src/tfr_executive/test/: test_tfr_executive.cpp
src/tfr_launch/: CMakeLists.txt  package.xml
src/tfr_launch/launch/: autonomous_test.launch  bin_broadcaster_test.launch  core.launch  dumping_test.launch  duo3d_test.launch  fake_localization.launch  fiducial_odom_test.launch  fusion_test.launch  gmap_test.launch  hector_test.launch  hole_test.launch  light_test.launch  local_light_test.launch  localization.launch  mission_control.launch  mission_control_test.launch  motor_toggle_test.launch  navigation_as_test.launch  navigation_test.launch  robot.launch  rtab_test.launch  sensor_test.launch  teleop_test.launch  xsens_test.launch
src/tfr_localization/: CMakeLists.txt  package.xml
src/tfr_localization/launch/: bin_broadcaster.launch  localization.launch
src/tfr_localization/src/: localization_action_client.cpp  localization_action_server.cpp  localization_echo.cpp  localization_helper.cpp
src/tfr_localization/test/: test_tfr_localization.cpp
src/tfr_mining/: CMakeLists.txt  package.xml
src/tfr_mining/data/: digging_queue_templates.yaml  testing_queue_templates.yaml
src/tfr_mining/launch/: mining.launch  test_digging_queue.launch  test_diggingclient.launch  test_diggingserver.launch
src/tfr_mining/src/: digging_action_server.cpp  digging_queue.cpp  digging_set.cpp  mining_echo.cpp  mining_helper.cpp  test_digging_client.cpp  test_digging_queue.cpp
src/tfr_mining/test/: test_tfr_mining.cpp
src/tfr_mission_control/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/tfr_mission_control/launch/: tfr_mission_control.launch
src/tfr_mission_control/scripts/: tfr_mission_control
src/tfr_mission_control/src/: mission_control.cpp  mission_control_subscriber.cpp
src/tfr_mission_control/test/: test_tfr_mission_control.cpp
src/tfr_msgs/: CMakeLists.txt  package.xml
src/tfr_msgs/action/: ArmMove.action  Aruco.action  ArucoIntegrate.action  Bin.action  Digging.action  Empty.action  Example.action  Localization.action  Navigation.action  Teleop.action
src/tfr_msgs/msg/: ArduinoAReading.msg  ArduinoBReading.msg  ArduinoReading.msg  DiggingState.msg  DrivebaseVelocity.msg  EncoderReading.msg  PotentiometerReading.msg  PwmCommand.msg  SystemStatus.msg
src/tfr_msgs/srv/: ArmStateSrv.srv  BinState.srv  BinStateSrv.srv  CodeSrv.srv  DurationSrv.srv  EmptySrv.srv  EncoderReading.srv  LocalizePoint.srv  SetOdometry.srv  WrappedImage.srv
src/tfr_navigation/: CMakeLists.txt  package.xml
src/tfr_navigation/launch/: action_client.launch  action_server.launch  gmap.launch  hector.launch  hole_broadcaster.launch  map_broadcaster.launch  navigation.launch  rtab.launch
src/tfr_navigation/params/: global_costmap.yaml  hector_params.yaml  local_costmap.yaml  move_base.yaml  planner.yaml  rtab.yaml  shared_costmap.yaml
src/tfr_navigation/src/: navigation_action_client.cpp  navigation_action_server.cpp  navigation_client.cpp  navigation_echo.cpp  navigation_goal_manager.cpp  navigation_helper.cpp  navigator.cpp
src/tfr_navigation/test/: test_goal_setting.cpp  test_tfr_navigation.cpp
src/tfr_sensor/: CMakeLists.txt  package.xml
src/tfr_sensor/calib/: front.yaml  rear.yaml
src/tfr_sensor/launch/: drivebase_odom.launch  (+12 more)
src/tfr_utilities/: CMakeLists.txt  package.xml
src/tfr_visualization/: CMakeLists.txt  package.xml
src/xsens_custom_msgs/: CMakeLists.txt  package.xml
src/xsens_driver/: CMakeLists.txt  TFIRE_README.md  package.xml
(+154 files in other folders)
