<?xml version="1.0"?>
<package format="2">
  <name>tfr_control</name>
  <version>0.0.0</version>
  <description>The tfr_control package</description>

  <!-- If you are the actual maintainer of this package, please say so here. -->
  <maintainer email="ryan.berge@trickfirerobotics.com">Ryan Berge</maintainer>
  <maintainer email="adam.krpan@outlook.com">Adam Krpan</maintainer>
  <license>BSD</license>
  <url type="website">http://www.trickfirerobotics.com/</url>
  <author email="ryan.berge@trickfirerobotics.com">Ryan Berge</author>
  <author email="adam.krpan@outlook.com">Adam Krpan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>gtest</test_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tfr_msgs</depend>
  <depend>tfr_utilities</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>effort_controllers</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>moveit_ros_planning_interface</depend>
</package>
