<?xml version="1.0"?>
<package format="2">
  <name>tfr_launch</name>
  <version>0.0.0</version>
  <description>Contains system level starting configurations to accomplish various tasks.</description>

  <maintainer email="collinsconway@gmail.com">Collin Conway</maintainer>
  <maintainer email="adam.krpan@outlook.com">Adam Krpan</maintainer>

  <license>BSD</license>
  <url type="website">http://www.trickfirerobotics.com/</url>
  <author email="collinsconway@gmail.com">Collin Conway</author>
  <author email="adam.krpan@outlook.com">Adam Krpan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>tfr_navigation</exec_depend>
  <exec_depend>tfr_visualization</exec_depend>
  <exec_depend>tfr_localization</exec_depend>
</package>
