<?xml version="1.0"?>
<package format="2">
  <name>tfr_mission_control</name>
  <version>0.1.0</version>
  <description>The tfr_mission_control package</description>

  <!-- If you are the actual maintainer of this package, please say so here. -->
  <maintainer email="dehaan.jeremiah@gmail.com">Jeremy DeHaan</maintainer>
  <license>BSD</license>
  <url type="website">http://www.trickfirerobotics.com/</url>
  <author email="dehaan.jeremiah@gmail.com">Jeremy DeHaan</author>
  <author email="nmcmichaelwork@gmail.com">Noah McMichael</author>
  <!-- <author email="another.author@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>gtest</test_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tfr_msgs</depend>
  <depend>tfr_utilities</depend>

</package>
