<?xml version="1.0"?>
<package format="2">
  <name>tfr_msgs</name>
  <version>0.0.0</version>
  <description>The tfr_msgs package</description>

  <maintainer email="collinsconway@gmail.com">Collin Conway</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
