<?xml version="1.0"?>
<package format="2">
  <name>tfr_navigation</name>
  <version>0.0.0</version>
  <description>The tfr_navigation package</description>

  <license>BSD</license>

  <maintainer email="ryan.berge@trickfirerobotics.com">Ryan Berge</maintainer>
  <url type="website">http://www.trickfirerobotics.com/</url>
  <author email="ryan.berge@trickfirerobotics.com">Ryan Berge</author>
  <author email="collinsconway@gmail.com">Collin Stair Conway</author>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>gtest</test_depend>
  <depend>tfr_msgs</depend>
  <depend>tfr_utilities</depend>
  <depend>roscpp</depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>rtabmap</exec_depend>
  <exec_depend>move_base</exec_depend>

</package>
