<?xml version="1.0"?>
<package format="2">
  <name>tfr_sensor</name>
  <version>0.0.0</version>
  <description>Contains files and software related to sensor data processing, device drivers are kept in separate
      packages</description>

  <!-- If you are the actual maintainer of this package, please say so here. -->
  <maintainer email="ryan.berge@trickfirerobotics.com">Ryan Berge</maintainer>
  <license>BSD</license>
  <url type="website">http://www.trickfirerobotics.com/</url>
  <author email="ryan.berge@trickfirerobotics.com">Ryan Berge</author>
  <author email="collinsconway@gmail.com">Collin Conway</author>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>gtest</test_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tfr_msgs</depend>
  <depend>tfr_utilities</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>actionlib</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <exec_depend>cv_camera</exec_depend>
  <exec_depend>xsens_driver</exec_depend>
  <exec_depend>duo3d_driver</exec_depend>

</package>
